tests/baselines/reference/jsdocFunction_missingReturn.errors.txt
/a.js(1,24): error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.


==== /a.js (1 errors) ====
    /** @type {function(): number} */
                           ~~~~~~
!!! error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.
    function f() {}
    